--- a/package.json
+++ b/package.json
@@ -1,9 +1,1 @@
-{
-  "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.17.3",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
-  }
-}
+{"scripts":{"dev":"ts-node-dev --transpile-only src/app.ts","typeorm":"ts-node-dev node_modules/.bin/typeorm"},"dependencies":{"@types/express":"^4.17.13","express":"^4.17.3","reflect-metadata":"^0.1.13","ts-node":"^10.7.0","typeorm":"^0.3.5","typescript":"^4.6.3","uuid":"^8.3.2"},"devDependencies":{"@types/uuid":"^8.3.4","ts-node-dev":"^1.1.8"}}
