--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
-        "dev": "ts-node-dev --transpile-only src/app.ts",
-        "typeorm": "ts-node-dev node_modules/.bin/typeorm"
+        "dev:": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only --ignore-watch node_modules src/app.ts",
+        "start": "ts-node src/app.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
     },
     "dependencies": {
         "@types/express": "^4.17.13",
@@ -25,6 +26,7 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2",
-        "ts-node-dev": "^1.1.8"
+        "ts-node-dev": "^1.1.8",
+        "tsconfig-paths": "^3.14.1"
     }
 }
