--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "scripts": {
-        "dev:": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only --ignore-watch node_modules src/app.ts",
-        "start": "ts-node src/app.ts",
-        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+        "dev:": "ts-node-dev --transpile-only src/app.ts",
+        "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
     },
     "dependencies": {
         "@types/express": "^4.17.13",
