--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "no-param-reassign": "off",
         "no-underscore-dangle": "off",
         "no-console": "off",
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "import/prefer-default-export": "off"
     }
 }
