--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "dev:": "ts-node-dev --transpile-only src/app.ts",
-        "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+        "migrate": "ts-node-dev -r ./node_modules/typeorm/cli.js -d src/ormconfig.ts"
     },
     "dependencies": {
         "@types/express": "^4.17.13",
@@ -24,6 +25,7 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2",
+        "ts-node": "^10.7.0",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths": "^3.14.1"
     }
