--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "scripts": {
-        "dev:": "ts-node-dev --transpile-only src/app.ts",
-        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-        "migrate": "ts-node-dev -r ./node_modules/typeorm/cli.js -d src/ormconfig.ts"
-    },
+        "dev": "ts-node-dev --transpile-only src/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+
+        },
     "dependencies": {
         "@types/express": "^4.17.13",
         "express": "^4.17.3",
@@ -25,7 +25,6 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2",
-        "ts-node": "^10.7.0",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths": "^3.14.1"
     }
