--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
     "scripts": {
         "dev": "ts-node-dev --transpile-only src/server.ts",
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
-
-        },
+    },
     "dependencies": {
         "@types/express": "^4.17.13",
+        "cors": "^2.8.5",
         "express": "^4.17.3",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.5",
+        "typeorm-pagination": "^2.0.3",
         "typescript": "^4.6.3",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/pg": "^8.6.5",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
