--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/express": "^4.17.13",
         "cors": "^2.8.5",
         "express": "^4.17.3",
+        "joi": "^17.6.0",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.5",
