--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "joi": "^17.6.0",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
+        "supertest": "^6.2.2",
         "typeorm": "^0.3.5",
         "typeorm-pagination": "^2.0.3",
         "typescript": "^4.6.3",
@@ -18,6 +19,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/pg": "^8.6.5",
+        "@types/supertest": "^2.0.12",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "@typescript-eslint/parser": "^5.18.0",
