--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-    "scripts": {
-        "dev": "ts-node-dev --transpile-only src/server.ts",
-        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
-    },
-    "dependencies": {
-        "@types/express": "^4.17.13",
-        "cors": "^2.8.5",
-        "express": "^4.17.3",
-        "joi": "^17.6.0",
-        "pg": "^8.7.3",
-        "reflect-metadata": "^0.1.13",
-        "supertest": "^6.2.2",
-        "typeorm": "^0.3.5",
-        "typeorm-pagination": "^2.0.3",
-        "typescript": "^4.6.3",
-        "uuid": "^8.3.2"
-    },
-    "devDependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/pg": "^8.6.5",
-        "@types/supertest": "^2.0.12",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.18.0",
-        "@typescript-eslint/parser": "^5.18.0",
-        "eslint": "^8.13.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-import-resolver-typescript": "^2.7.1",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.6.2",
-        "ts-node-dev": "^1.1.8",
-        "tsconfig-paths": "^3.14.1"
-    }
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest --runInBand --coverage --coverageReporters"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "joi": "^17.6.0",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.5",
+    "typeorm-pagination": "^2.0.3",
+    "typescript": "^4.6.3",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.2",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.14.1"
+  }
 }
