feat: create fake database connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,13 @@ services:
       POSTGRES_USER: postgres
     ports:
       - "5432:5432"
+
+  database-test:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+    ports:
+      - "8080:8080"
+   
+    
